--- a/default.html
+++ b/default.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-        <h1>MobicomTv Test Transmission</h1>
-        <video id="azuremediaplayer" class="azuremediaplayer amp-default-skin amp-big-play-centered" controls autoplay width="640"
-           height="400" poster="" data-setup='{ "nativeControlsForTouch": false, "logo": { "enabled": false }, "plugins": { "contentTitle": { "name": "Red Channel Live Transmission", "horizontalPosition": "left", "verticalPosition": "center" } } }'
+        <h1>Red Channel Live Transmission</h1>
+        <video id="azuremediaplayer" class="azuremediaplayer amp-default-skin amp-big-play-centered" controls autoplay width="auto"
+           height="auto" poster="" data-setup='{ "nativeControlsForTouch": false, "logo": { "enabled": false }, "plugins": { "contentTitle": { "name": "Red Channel Live ", "horizontalPosition": "left", "verticalPosition": "center" } } }'
                tabindex="0"></video>
         <script type="text/javascript" src="/main.js"></script>
 </body>
